margin child box alignment fixed

--- a/public/style.css
+++ b/public/style.css
@@ -77,7 +77,7 @@ body {
 }
 
 #child_box_margin {
-
+  margin: 25%;
 }
 
 
